# EPAM_LEARN

./: .gitignore  CMakeLists.txt
11_module/: CMakeLists.txt
11_module/11.2_sub_module/: CMakeLists.txt  Tsk1_11_2.cpp  Tsk2_11_2.cpp  Tsk3_11_2.cpp
1_module/: CMakeLists.txt
1_module/1.10_Str_Un/: CMakeLists.txt  Tsk1_1_10.c
1_module/1.11_Ptr/: CMakeLists.txt  Tsk1_1_11.c  Tsk2_1_11.cpp  Tsk3_1_11.c  Tsk4_1_11.c  Tsk5_1_11.c  Tsk6_1_11.c  Tsk7_1_11.cpp
1_module/1.12(File)/: CMakeLists.txt  Tsk3_1_12.c  emp1_slip.txt  emp2_slip.txt  emp983_slip.txt  students.txt
1_module/1.12_File/: CMakeLists.txt  Tsk1_1_12.c  Tsk2_1_12.c  Tsk4_1_12.c  Tsk5_1_12.c  emp12_slip.txt  emp3_slip.txt  learn_file.cpp
1_module/1.13_PrePro/: CMakeLists.txt  Tsk1_1_13.cpp  Tsk2_1_13.cpp  Tsk3_1_13.cpp  Tsk4_1_13.cpp  Tsk5_1_13.cpp  Tsk6_1_13a.c  Tsk6_1_13b.c  config.h  debug.h  env.h  logger.h  myheader.h  platform.h
1_module/1.1_Var_Dec/: CMakeLists.txt  Tsk1_1_1.cpp  Tsk2_1_1.c
1_module/1.2_Pf_Sf_ForSpfr/: CMakeLists.txt  Tsk1_1_2.c
1_module/1.7_Func/: CMakeLists.txt  Tsk1.cpp  Tsk2.cpp  Tsk3.cpp  Tsk4.cpp  Tsk5.cpp
1_module/1.8_Recursion/: 1.8_Tsk1.cpp  1.8_Tsk2  1.8_Tsk2.cpp  CMakeLists.txt
1_module/1.9_Array/: CMakeLists.txt  Tsk1_1_9.cpp  Tsk2_1_9.cpp  Tsk3_1_9.cpp  Tsk4_1_9.cpp  Tsk5_1_9.cpp
2_module/: CMakeLists.txt
2_module/2.1_Intro_OOPs/: CMakeLists.txt  Tsk1_2_1.cpp  Tsk2_2_1.cpp  Tsk3_2_1.cpp  Tsk4_2_1.cpp  Tsk5_2_1.cpp  Tsk6_2_1.cpp  Tsk7_2_1.cpp  Tsk8_2_1.cpp  Tsk9_2_1.cpp  learn2.cpp
2_module/2.2_Memo_Mngmnt/: CMakeLists.txt  Tsk1_2_2.cpp  Tsk2_2_2.cpp  Tsk3_2_2.cpp  Tsk4_2_2.cpp  Tsk5_2_2.cpp
2_module/2.7_Enc_Abs_Inh/: CMakeLists.txt  Tsk10_2_7.cpp  Tsk11_2_7.cpp  Tsk12_2_7.cpp  Tsk13_2_7.cpp  Tsk14_2_7.cpp  Tsk1_2_7.cpp  Tsk2_2_7.cpp  Tsk3_2_7.cpp  Tsk4_2_7.cpp  Tsk5_2_7.cpp  Tsk6_2_7.cpp  Tsk7_2_7.cpp  Tsk8_2_7.cpp  Tsk9_2_7.cpp  student.h
3_module/: CMakeLists.txt
3_module/3.1_poly/: CMakeLists.txt  Tsk1_3_1.cpp  Tsk2_3_1.cpp  Tsk3_3_1.cpp  Tsk4_3_1.cpp  Tsk6_3_1.cpp  Tsk7_3_1.cpp  Tsk8_3_1.cpp  Tsk9_3_1.cpp
3_module/3.2_virt_inhr/: CMakeLists.txt  Tsk10_3_2.cpp  Tsk1_3_2.cpp  Tsk2_3_2.cpp  Tsk3_3_2.cpp  Tsk4_3_2.cpp  Tsk5_3_2.cpp  Tsk6_3_2.cpp  Tsk7_3_2.cpp  Tsk8_3_2.cpp  Tsk9_3_2.cpp
4_module/: CMakeLists.txt
4_module/4.1_streams/: CMakeLists.txt  Friend(prac).cpp  Tsk1_4_1.cpp  Tsk2_4_1.cpp  Tsk3_4_1.cpp  Tsk3_4_1.txt  Tsk4_4_1.cpp  Tsk5_4_1.cpp  Tsk6_4_1.cpp  Tsk7.txt  Tsk7_4_1.cpp  Tsk8_4_1.cpp  Tsk9.txt  Tsk9_4_1.cpp  Tsk_4_4_1.txt  book.txt  endl_Vs_n(prac).cpp  temp.txt
4_module/4.2_friend_C&F/: FrndClass_tgt_coupl(Prac).cpp  Tsk1_4_2.cpp  Tsk2_4_2.cpp  Tsk3_4_2.cpp
4_module/4.3_Exp_Hnd/: CMakeLists.txt  Tsk1_4_3.cpp  Tsk2_4_3.cpp  Tsk3_4_3.cpp  Tsk4_4_3.cpp  Tsk5_4_3.cpp  Tsk6_4_3.cpp  Tsk7_4_3.cpp
5_module/: CMakeLists.txt
5_module/5.1_Variadic_temp/: CMakeLists.txt  Tsk1_5_1.cpp  Tsk2_5_1.cpp  Tsk3_5_1.cpp  Tsk4_5_1.cpp  Tsk5_5_1.cpp
5_module/5.2_NameSpace_Template/: CMakeLists.txt  Tsk1_5_2.cpp  Tsk2_5_2.cpp  Tsk3_5_2.cpp  Tsk4_5_2.cpp  Tsk5_5_2.cpp  Tsk6_5_2.cpp  Tsk7_5_2.cpp
6_module/: CMakeLists.txt
6_module/6.1_auto/: CMakeLists.txt  Tsk10_6_1.cpp  Tsk11_6_1.cpp  Tsk12_6_1.cpp  Tsk13_6_1.cpp  Tsk14_6_1.cpp  Tsk15_6_1.cpp  Tsk1_6_1.cpp  Tsk2_6_1.cpp  Tsk3_6_1.cpp  Tsk4_6_1.cpp  Tsk5_6_1.cpp  Tsk6_6_1.cpp  Tsk7_6_1.cpp  Tsk8_6_1.cpp  Tsk9_6_1.cpp
6_module/6.2_func/: CMakeLists.txt  Tsk10_6_2.cpp  Tsk11_6_2.cpp  Tsk12_6_2.cpp  Tsk13_6_2.cpp  Tsk14_6_2.cpp  Tsk15_6_2.cpp  Tsk1_6_2.cpp  Tsk2_6_2.cpp  Tsk3_6_2.cpp  Tsk4_6_2.cpp  Tsk5_6_2.cpp  Tsk6_6_2.cpp  Tsk7_6_2.cpp  Tsk8_6_2.cpp  Tsk9_6_2.cpp
6_module/6.3_move/: CMakeLists.txt  Tsk10_6_3.cpp  Tsk11_6_3.cpp  Tsk12_6_3.cpp  Tsk13_6_3.cpp  Tsk14_6_3.cpp  Tsk15_6_3.cpp  Tsk1_6_3.cpp  Tsk2_6_3.cpp  Tsk3_6_3.cpp  Tsk4_6_3.cpp  Tsk5_6_3.cpp  Tsk6_6_3.cpp  Tsk7_6_3.cpp  Tsk9_6_3.cpp  tsk8_6_3.cpp
6_module/6.4_idioms_RAII_PIMPL/: CMakeLists.txt  Tsk1_6_4.cpp  Tsk2_6_4.cpp  Tsk3_6_4.cpp  Tsk4_6_4.cpp  Tsk5_6_4_.cpp
6_module/6.4_idioms_RAII_PIMPL/Tsk10/: CMakeLists.txt  Tsk10_6_4.cpp  Tsk10_6_4.h  Tsk10_6_4M.cpp
6_module/6.4_idioms_RAII_PIMPL/Tsk6/: CMakeLists.txt  Tsk6_6_4.cpp  Tsk6_6_4.h  Tsk6_6_4M.cpp
6_module/6.4_idioms_RAII_PIMPL/Tsk7/: CMakeLists.txt  Tsk7_6_4.cpp  Tsk7_6_4.h  Tsk7_6_4M.cpp
6_module/6.4_idioms_RAII_PIMPL/Tsk8/: CMakeLists.txt  Tsk8_6_4.cpp  Tsk8_6_4.h  Tsk8_6_4M.cpp
6_module/6.4_idioms_RAII_PIMPL/Tsk9/: CMakeLists.txt  TSk9_6_4M.cpp  Tsk9_6_4.cpp  Tsk9_6_4.h
7_module/: CMakeLists.txt
7_module/7.1_casting_RTTI/: CMakeLists.txt  Tsk1_7_1.cpp  Tsk2_7_1.cpp  Tsk3_7_1.cpp  Tsk4_7_1.cpp  Tsk5_7_1.cpp
7_module/7.2_smrt_ptrNdeltr/: CMakeLists.txt  Tsk1_7_2.cpp  Tsk2_7_2.cpp  Tsk3_7_2.cpp  Tsk4_7_2.cpp  Tsk5_7_2.cpp  Tsk6_7_2.cpp  Tsk7_7_2.cpp
8_module/: CMakeLists.txt  Tsk10_8.cpp  Tsk11_8.cpp  Tsk12_8.cpp  Tsk13_8.cpp  Tsk14_8.cpp  Tsk15_8.cpp  Tsk1_8.cpp  Tsk2_8.cpp  Tsk3_8.cpp  Tsk4_8.cpp  Tsk5_8.cpp  Tsk6_8.cpp  Tsk7_8.cpp  Tsk8_8.cpp  Tsk9_8.cpp
9_module/: CMakeLists.txt  Tsk10_9_1.cpp  Tsk11_9_1.cpp  Tsk12_9_1.cpp  Tsk13_9_1.cpp  Tsk14_9_1.cpp  Tsk15_9_1.cpp  Tsk1_9_1.cpp  Tsk2_9_1.cpp  Tsk3_9_1.cpp  Tsk4_9_1.cpp  Tsk5_9_1.cpp  Tsk6_9_1.cpp  Tsk7_9_1.cpp  Tsk8_9_1.cpp  Tsk9_9_1.cpp
9_module/9.2_thread/: CMakeLists.txt  Tsk1_9_2.cpp
9_module/9.3_Dead_Race_Atomic/: CMakeLists.txt  Tsk10_9_3.cpp  Tsk11_9_3.cpp  Tsk12_9_3.cpp  Tsk13_9_3.cpp  Tsk14_9_3.cpp  Tsk15_9_3.cpp  Tsk1_9_3.cpp  Tsk2_9_3.cpp  Tsk3_9_3.cpp  Tsk4_9_3.cpp  Tsk5_9_3.cpp  Tsk6_9_3.cpp  Tsk7_9_3.cpp  Tsk8_9_3.cpp  Tsk9_9_3.cpp
9_module/prac9/: 1_Trd_lif_cycl.cpp  2_condition_variable.cpp  3_Queue_spinning_problem.cpp  5_Race_condition.cpp  6_outOfOrderExecution.cpp  7_latch.cpp  8_barrier.cpp  9_ThreadPool.cpp  CMakeLists.txt  Queue_CV_mtx_no_spinning.cpp
