add_executable(Tsk1_8 Tsk1_8.cpp)
add_executable(Tsk2_8 Tsk2_8.cpp)
add_executable(Tsk3_8 Tsk3_8.cpp)
add_executable(Tsk4_8 Tsk4_8.cpp)
add_executable(Tsk5_8 Tsk5_8.cpp)
add_executable(Tsk6_8 Tsk6_8.cpp)
add_executable(Tsk7_8 Tsk7_8.cpp)
add_executable(Tsk8_8 Tsk8_8.cpp)
add_executable(Tsk9_8 Tsk9_8.cpp)
add_executable(Tsk10_8 Tsk10_8.cpp)
add_executable(Tsk11_8 Tsk11_8.cpp)
add_executable(Tsk12_8 Tsk12_8.cpp)
add_executable(Tsk13_8 Tsk13_8.cpp)
add_executable(Tsk14_8 Tsk14_8.cpp)
add_executable(Tsk15_8 Tsk15_8.cpp)
