add_subdirectory(prac9)
add_subdirectory(9.2_thread)
add_subdirectory(9.3_Dead_Race_Atomic)
add_executable(Tsk1_9_1 Tsk1_9_1.cpp)
add_executable(Tsk2_9_1 Tsk2_9_1.cpp)
add_executable(Tsk3_9_1 Tsk3_9_1.cpp)
add_executable(Tsk4_9_1 Tsk4_9_1.cpp)
add_executable(Tsk5_9_1 Tsk5_9_1.cpp)
add_executable(Tsk6_9_1 Tsk6_9_1.cpp)
add_executable(Tsk7_9_1 Tsk7_9_1.cpp)
add_executable(Tsk8_9_1 Tsk8_9_1.cpp)
add_executable(Tsk9_9_1 Tsk9_9_1.cpp)
add_executable(Tsk10_9_1 Tsk10_9_1.cpp)
add_executable(Tsk11_9_1 Tsk11_9_1.cpp)
add_executable(Tsk12_9_1 Tsk12_9_1.cpp)
add_executable(Tsk13_9_1 Tsk13_9_1.cpp)
add_executable(Tsk14_9_1 Tsk14_9_1.cpp)
add_executable(Tsk15_9_1 Tsk15_9_1.cpp)

