add_executable(1.8_Tsk1 1.8_Tsk1.cpp
        ../../2_module/2.1_Intro_OOPs/leaarn2.cpp
        ../../2_module/2.1_Intro_OOPs/Tsk1_2_1.cpp
        ../../2_module/2.1_Intro_OOPs/Tsk2_2_1.cpp
        ../../2_module/2.1_Intro_OOPs/Tsk3_2_1.cpp
        ../../2_module/2.1_Intro_OOPs/Tsk4_2_1.cpp)
add_executable(1.8_Tsk2 1.8_Tsk2.cpp)