add_executable(learn2 learn2.cpp)
add_executable(Tsk1_2_1 Tsk1_2_1.cpp)
add_executable(Tsk2_2_1 Tsk2_2_1.cpp)
add_executable(Tsk3_2_1 Tsk3_2_1.cpp)
add_executable(Tsk4_2_1 Tsk4_2_1.cpp)
add_executable(Tsk5_2_1 Tsk5_2_1.cpp)
add_executable(Tsk6_2_1 Tsk6_2_1.cpp)
add_executable(Tsk7_2_1 Tsk7_2_1.cpp)
add_executable(Tsk8_2_1 Tsk8_2_1.cpp)
add_executable(Tsk9_2_1 Tsk9_2_1.cpp)