add_executable(Tsk1_2_7 Tsk1_2_7.cpp)
add_executable(Tsk2_2_7 Tsk2_2_7.cpp)
add_executable(Tsk3_2_7 Tsk3_2_7.cpp)
add_executable(Tsk4_2_7 Tsk4_2_7.cpp)
add_executable(Tsk5_2_7 Tsk5_2_7.cpp)
add_executable(Tsk6_2_7 Tsk6_2_7.cpp)
add_executable(Tsk7_2_7 Tsk7_2_7.cpp)
add_executable(Tsk8_2_7 Tsk8_2_7.cpp)
add_executable(Tsk9_2_7 Tsk9_2_7.cpp)