add_executable(opr_overlod_prac opr_ovrlod_prac)
add_executable(Tsk1_3_1.cpp Tsk1_3_1)
add_executable(Tsk2_3_1.cpp Tsk2_3_1)
add_executable(Tsk3_3_1.cpp Tsk3_3_1)
add_executable(Tsk4_3_1.cpp Tsk4_3_1)
add_executable(Tsk5_3_1.cpp Tsk5_3_1)
add_executable(Tsk6_3_1.cpp Tsk6_3_1)
add_executable(Tsk7_3_1.cpp Tsk7_3_1)
add_executable(Tsk8_3_1.cpp Tsk8_3_1)
add_executable(Tsk9_3_1.cpp Tsk9_3_1)