add_executable(opr_overlod_prac opr_ovrlod_prac.cpp)
add_executable(Tsk1_3_1 Tsk1_3_1.cpp)
add_executable(Tsk2_3_1 Tsk2_3_1.cpp)
add_executable(Tsk3_3_1 Tsk3_3_1.cpp)
add_executable(Tsk4_3_1 Tsk4_3_1.cpp)
add_executable(Tsk5_3_1 Tsk5_3_1.cpp)
add_executable(Tsk6_3_1 Tsk6_3_1.cpp)
add_executable(Tsk7_3_1 Tsk7_3_1.cpp)
add_executable(Tsk8_3_1 Tsk8_3_1.cpp)
add_executable(Tsk9_3_1 Tsk9_3_1.cpp)