add_executable(Tsk1_3_2.cpp Tsk1_3_2)
add_executable(Tsk2_3_2.cpp Tsk2_3_2)
add_executable(Tsk3_3_2.cpp Tsk3_3_2)
add_executable(Tsk4_3_2.cpp Tsk4_3_2)
add_executable(Tsk5_3_2.cpp Tsk5_3_2)
add_executable(Tsk6_3_2.cpp Tsk6_3_2)
add_executable(Tsk7_3_2.cpp Tsk7_3_2)
add_executable(Tsk8_3_2.cpp Tsk8_3_2)
add_executable(Tsk9_3_2.cpp Tsk9_3_2)
add_executable(Tsk10_3_2.cpp Tsk10_3_2)



