add_executable(Tsk1_3_2 Tsk1_3_2.cpp )
add_executable(Tsk2_3_2 Tsk2_3_2.cpp )
add_executable(Tsk3_3_2 Tsk3_3_2.cpp )
add_executable(Tsk4_3_2 Tsk4_3_2.cpp)
add_executable(Tsk5_3_2 Tsk5_3_2.cpp )
add_executable(Tsk6_3_2 Tsk6_3_2.cpp )
add_executable(Tsk7_3_2 Tsk7_3_2.cpp )
add_executable(Tsk8_3_2 Tsk8_3_2.cpp )
add_executable(Tsk9_3_2 Tsk9_3_2.cpp )
add_executable(Tsk10_3_2 Tsk10_3_2.cpp )



