add_executable(endl_Vs_n_prac endl_Vs_n_prac.cpp)
add_executable(Friend_prac Friend_prac.cpp)
add_executable(Tsk1_4_1 Tsk1_4_1.cpp)
add_executable(Tsk2_4_1 Tsk2_4_1.cpp)
add_executable(Tsk3_4_1 Tsk3_4_1.cpp)
add_executable(Tsk4_4_1 Tsk4_4_1.cpp)
add_executable(Tsk5_4_1 Tsk5_4_1.cpp)
add_executable(Tsk6_4_1 Tsk6_4_1.cpp)
add_executable(Tsk7_4_1 Tsk7_4_1.cpp)
add_executable(Tsk8_4_1 Tsk8_4_1.cpp)
add_executable(Tsk9_4_1 Tsk9_4_1.cpp)



