add_executable(custom_exc_prac custom_exc_prac.cpp)
add_executable(out_of_range_exc_prac out_of_range_exc_prac.cpp)
add_executable(Stack_unwinding_prac Stack_unwinding_prac.cpp)
add_executable(Tsk1_4_3 Tsk1_4_3.cpp)
add_executable(Tsk2_4_3 Tsk2_4_3.cpp)
add_executable(Tsk3_4_3 Tsk3_4_3.cpp)
add_executable(Tsk4_4_3 Tsk4_4_3.cpp)
add_executable(Tsk5_4_3 Tsk5_4_3.cpp)
add_executable(Tsk6_4_3 Tsk6_4_3.cpp)
add_executable(Tsk7_4_3 Tsk7_4_3.cpp)
