add_subdirectory(practice)
add_executable(Tsk1_6_1 Tsk1_6_1.cpp)
add_executable(Tsk2_6_1 Tsk2_6_1.cpp)
add_executable(Tsk3_6_1 Tsk3_6_1.cpp)
add_executable(Tsk4_6_1 Tsk4_6_1.cpp)
add_executable(Tsk5_6_1 Tsk5_6_1.cpp)
add_executable(Tsk6_6_1 Tsk6_6_1.cpp)
add_executable(Tsk7_6_1 Tsk7_6_1.cpp)
add_executable(Tsk8_6_1 Tsk8_6_1.cpp)
add_executable(Tsk9_6_1 Tsk9_6_1.cpp)
add_executable(Tsk10_6_1 Tsk10_6_1.cpp)
add_executable(Tsk11_6_1 Tsk11_6_1.cpp)
add_executable(Tsk12_6_1 Tsk12_6_1.cpp)
add_executable(Tsk13_6_1 Tsk13_6_1.cpp)
add_executable(Tsk14_6_1 Tsk14_6_1.cpp)
add_executable(Tsk15_6_1 Tsk15_6_1.cpp)