add_subdirectory(practice)
add_executable(Tsk1_6_2 Tsk1_6_2.cpp)
add_executable(Tsk2_6_2 Tsk2_6_2.cpp)
add_executable(Tsk3_6_3 Tsk3_6_2.cpp)
add_executable(Tsk4_6_3 Tsk4_6_2.cpp)
add_executable(Tsk5_6_3 Tsk5_6_2.cpp)
add_executable(Tsk6_6_3 Tsk6_6_2.cpp)
add_executable(Tsk7_6_3 Tsk7_6_2.cpp)
add_executable(Tsk8_6_3 Tsk8_6_2.cpp)
add_executable(Tsk9_6_3 Tsk9_6_2.cpp)
add_executable(Tsk10_6_3 Tsk10_6_2.cpp)
add_executable(Tsk11_6_3 Tsk11_6_2.cpp)
