add_subdirectory(practice)
add_executable(Tsk1_6_2 Tsk1_6_2.cpp)
add_executable(Tsk2_6_2 Tsk2_6_2.cpp)
add_executable(Tsk3_6_2 Tsk3_6_2.cpp)
add_executable(Tsk4_6_2 Tsk4_6_2.cpp)
add_executable(Tsk5_6_2 Tsk5_6_2.cpp)
add_executable(Tsk6_6_2 Tsk6_6_2.cpp)
add_executable(Tsk7_6_2 Tsk7_6_2.cpp)
add_executable(Tsk8_6_2 Tsk8_6_2.cpp)
add_executable(Tsk9_6_2 Tsk9_6_2.cpp)
add_executable(Tsk10_6_2 Tsk10_6_2.cpp)
add_executable(Tsk11_6_2 Tsk11_6_2.cpp)
add_executable(Tsk12_6_2 Tsk12_6_2.cpp)
add_executable(Tsk13_6_2 Tsk13_6_2.cpp)
add_executable(Tsk14_6_2 Tsk14_6_2.cpp)
add_executable(Tsk15_6_2 Tsk15_6_2.cpp)
