add_executable(Tsk1_6_4 Tsk1_6_4.cpp)
add_executable(Tsk2_6_4 Tsk2_6_4.cpp)
add_executable(Tsk3_6_4 Tsk3_6_4.cpp)
add_executable(Tsk4_6_4 Tsk4_6_4.cpp)
add_executable(Tsk5_6_4_ Tsk5_6_4_.cpp)
add_subdirectory(Tsk6)
add_subdirectory(Tsk7)
add_subdirectory(Tsk8)
add_subdirectory(Tsk9)
add_subdirectory(Tsk10)
