add_executable(Trd_lif_cycl 1_Trd_lif_cycl.cpp)
add_executable(condition_variable 2_condition_variable.cpp)
add_executable(Queue_spinning_problem 3_Queue_spinning_problem.cpp)
add_executable(Queue_CV_mtx_no_spinning Queue_CV_mtx_no_spinning.cpp)
add_executable(5_Race_condition 5_Race_condition.cpp)
add_executable(6_outOfOrderExecution 6_outOfOrderExecution.cpp)
add_executable(7_latch 7_latch.cpp)
add_executable(8_barrier 8_barrier.cpp)
add_executable(9_ThreadPool 9_ThreadPool.cpp)